--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.github.debop</groupId>
     <artifactId>hibernate-redis-parent</artifactId>
-    <version>1.6.3-SNAPSHOT</version>
+    <version>1.6.3-watershed-1</version>
     <packaging>pom</packaging>
     <url>https://github.com/debop/hibernate-redis</url>
 
@@ -29,9 +29,9 @@
     </issueManagement>
 
     <scm>
-        <connection>scm:git:git@github.com:debop/hibernate-redis.git</connection>
-        <url>scm:git:git@github.com:debop/hibernate-redis.git</url>
-        <developerConnection>scm:git:git@github.com:debop/hibernate-redis.git</developerConnection>
+        <connection>scm:git:git@github.com:WatershedLRS/hibernate-redis.git</connection>
+        <url>scm:git:git@github.com:WatershedLRS/hibernate-redis.git</url>
+        <developerConnection>scm:git:git@github.com:WatershedLRS/hibernate-redis.git</developerConnection>
     </scm>
 
     <properties>
@@ -302,29 +302,16 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>Local.Repo</id>
-            <name>Local Release Repository</name>
-            <url>http://127.0.0.1:8081/nexus/content/repositories/releases</url>
-        </repository>
-        <repository>
-            <id>Local.Repo.Snapshot</id>
-            <name>Local Snapshot Repository</name>
-            <url>http://127.0.0.1:8081/nexus/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
-
     <distributionManagement>
         <repository>
-            <id>Local.Repo</id>
-            <name>Local Release Repository</name>
-            <url>http://127.0.0.1:8081/nexus/content/repositories/releases</url>
+            <id>WatershedLrsNexus</id>
+            <name>Internal Releases</name>
+            <url>http://nexus.watershedlrs.com/nexus/content/repositories/releases/</url>
         </repository>
         <snapshotRepository>
-            <id>Local.Repo.Snapshot</id>
-            <name>Local Snapshot Repository</name>
-            <url>http://127.0.0.1:8081/nexus/content/repositories/snapshots</url>
+            <id>WatershedLrsNexus</id>
+            <name>Internal Snapshots</name>
+            <url>http://nexus.watershedlrs.com/nexus/content/repositories/snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 </project>
